// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Atoms/Card ] should render Clickable 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm is-clickable"
  >
    Lacerations coaster sort comings windlance happily EIf-witch handful unbefitting? Decide rising startled Aragorn invitations midnight deserves fortunes innards. You cannot hide. I see you. There is no life in the void. Only death. Mirror Emyn dreamed!
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Card ] should render Colors 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm"
  >
    Lacerations coaster sort comings windlance happily EIf-witch handful unbefitting? Decide rising startled Aragorn invitations midnight deserves fortunes innards. You cannot hide. I see you. There is no life in the void. Only death. Mirror Emyn dreamed!
  </div>
  <div
    class="card color-primary size-sm"
  >
    Lacerations coaster sort comings windlance happily EIf-witch handful unbefitting? Decide rising startled Aragorn invitations midnight deserves fortunes innards. You cannot hide. I see you. There is no life in the void. Only death. Mirror Emyn dreamed!
  </div>
  <div
    class="card color-secondary size-sm"
  >
    Lacerations coaster sort comings windlance happily EIf-witch handful unbefitting? Decide rising startled Aragorn invitations midnight deserves fortunes innards. You cannot hide. I see you. There is no life in the void. Only death. Mirror Emyn dreamed!
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Card ] should render Default 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm"
  >
    Lacerations coaster sort comings windlance happily EIf-witch handful unbefitting? Decide rising startled Aragorn invitations midnight deserves fortunes innards. You cannot hide. I see you. There is no life in the void. Only death. Mirror Emyn dreamed!
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Card ] should render Dragabble 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm is-draggable"
  >
    Lacerations coaster sort comings windlance happily EIf-witch handful unbefitting? Decide rising startled Aragorn invitations midnight deserves fortunes innards. You cannot hide. I see you. There is no life in the void. Only death. Mirror Emyn dreamed!
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Card ] should render Sizes 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm"
  >
    Lacerations coaster sort comings windlance happily EIf-witch handful unbefitting? Decide rising startled Aragorn invitations midnight deserves fortunes innards. You cannot hide. I see you. There is no life in the void. Only death. Mirror Emyn dreamed!
  </div>
  <div
    class="card color-base size-md"
  >
    Lacerations coaster sort comings windlance happily EIf-witch handful unbefitting? Decide rising startled Aragorn invitations midnight deserves fortunes innards. You cannot hide. I see you. There is no life in the void. Only death. Mirror Emyn dreamed!
  </div>
  <div
    class="card color-base size-lg"
  >
    Lacerations coaster sort comings windlance happily EIf-witch handful unbefitting? Decide rising startled Aragorn invitations midnight deserves fortunes innards. You cannot hide. I see you. There is no life in the void. Only death. Mirror Emyn dreamed!
  </div>
</DocumentFragment>
`;
